Refined build-akeneo and renamed it to akeneo-project

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
             "Incenteev\\ParameterHandler\\": "parameter_handler/"
         }
     },
-    "bin": ["bin/akeneo-bootstrap"]
+    "bin": [
+        "bin/akeneo-bootstrap",
+        "bin/akeneo-project"
+    ]
 }
