--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -10,24 +10,20 @@ services:
       - "AKENEO_DIRECTORY=${AKENEO_DIRECTORY}"
       - "PACKAGES_DIRECTORY=${PACKAGES_DIRECTORY}"
     volumes:
-      - "bin:/opt/akeneo/bin"
+      - "bin:/opt/akeneo-bootstrap/bin"
   web:
     environment:
       AWAIT_AKENEO_BUILD_DONE: 1
     volumes:
       - "./html:${AKENEO_DIRECTORY}"
       - "./packages:${PACKAGES_DIRECTORY}"
-  builder:
+  setup:
     image: netresearch/akeneo-php:5
-    environment:
-      - "AKENEO_VERSION"
-      - "AKENEO_DIRECTORY"
-      - "PACKAGES_DIRECTORY"
     volumes:
       - "./html:${AKENEO_DIRECTORY}"
       - "./packages:${PACKAGES_DIRECTORY}"
-      - "bin:/opt/akeneo/bin/"
-    command: [ "/opt/akeneo/bin/build-akeneo" ]
+      - "bin:/opt/akeneo-bootstrap/bin"
+    command: [ "/opt/akeneo-bootstrap/bin/akeneo-project", "create", "-f", "-v", "${AKENEO_VERSION}", "-i", "${AKENEO_DIRECTORY}", "-p", "${PACKAGES_DIRECTORY}" ]
 
 volumes:
   bin:
